--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@
     margin: 10px 0;
 } */
 
-h1 {
-    font-size: 4rem;
-    background: linear-gradient(90deg, #6a5acd, #48b1f3);
-    -webkit-background-clip: text;
-    -webkit-text-fill
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #1e1e2f;
+    z-index: -1;
 }
