Moved the back to home button in CV page

--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,14 @@
 }
 
 
+.back-to-home {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+    color: purple;
+    text-decoration: none;
+}
+
+.back-to-home:hover {
+    text-decoration: underline;
+}
